--- a/templates/authenticate/register.html
+++ b/templates/authenticate/register.html
@@ -8,25 +8,18 @@
             Register to MoneyMint
         </div>
         <div class="mb-3 col-6">
-            <label for="firstname" class="form-label">First name</label>
-            <input type="text" class="form-control" id="Firstname" name="firstname" required>
+            <label for="username" class="form-label">First name</label>
+            <input type="text" class="form-control" id="username" name="username" required>
         </div>
         <div class="mb-3 col-6">
-            <label for="lastname" class="form-label">Last name</label>
-            <input type="text" class="form-control" id="lastname" name="lastname" required>
-        </div>
-        <div class="mb-3 col-6">
-            <label for="username" class="form-label">Email</label>
-            <input type="email" class="form-control" id="username" name="username" required>
+            <label for="email" class="form-label">Email</label>
+            <input type="email" class="form-control" id="email" name="email" required>
         </div>
         <div class="mb-3 col-6">
             <label for="DOB" class="form-label">Date of birth</label>
             <input type="date" class="form-control" id="DOB" name="DOB" required>
         </div>
-        <div class="mb-3 col-12">
-            <label for="address" class="form-label">Address</label>
-            <textarea class="form-control" id="address" name="address" rows="5"></textarea>
-          </div>
+       
         <div class="mb-3 col-6">
             <label for="aadhar" class="form-label">Aadhar card number</label>
             <input type="number" class="form-control" id="aadhar" name="aadhar" required>
@@ -39,6 +32,10 @@
             <label for="password" class="form-label">Password</label>
             <input type="password" class="form-control" id="password" name="password" required>
         </div>
+        <div class="mb-3 col-12">
+            <label for="address" class="form-label">Address</label>
+            <textarea class="form-control" id="address" name="address" rows="5"></textarea>
+          </div>
         <div class="mb-3">
             <button type="submit" class="btn btn-primary">Register</button>
         </div>
