--- a/templates/user/index.html
+++ b/templates/user/index.html
@@ -1,1 +1,18 @@
 {% extends 'base.html' %}
+
+{% block content %}
+    <div class="container">
+        <h1>Hello investors</h1>
+        <p>This is the place you invest in to do smooth transactions.</p>
+    </div>
+<footer>
+    <div class="footer-content">
+        <p>&copy; 2025 Stock Broker Platform. All rights reserved.</p>
+        <ul>
+            <li><a href="/about/">About Us</a></li>
+            <li><a href="/contact/">Contact</a></li>
+            <li><a href="/privacy/">Privacy Policy</a></li>
+        </ul>
+    </div>
+</footer>
+{% endblock %}
