--- a/templates/authenticate/login.html
+++ b/templates/authenticate/login.html
@@ -20,7 +20,7 @@
                 <label for="userType" class="form-label">Sign In As</label>
                 <select class="form-select" id="userType" name="userType" required>
                     <option value="">Select an option</option>
-                    <option value="admin">Admin</option>
+                    <option value="Admin">Admin</option>
                     <option value="user">User</option>
                 </select>
             </div>
