--- a/templates/base.html
+++ b/templates/base.html
@@ -6,34 +6,33 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>MoneyMint</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body>
     <div class="container">
       <div class="row m-0 bg-light">
-          <div class="col-12">
-              <div class="text-center mt-3">
-                 MoneyMint
-                 
-                 <div class="float-start">
-                  <!--<a href="" class="text-decoration-none m-3">-->
-                     <i class="fa-solid fa-sign-in "></i>
-                     Login
-                  </a> 
-                  <!--<a href="" class="text-decoration-none">-->
-                     <i class="fa-solid fa-user-plus"></i>
-                     Register
-                  </a>
-                 </div>
+        <div class="col-12">
+          <div class="text-center mt-3">
+            <strong>MoneyMint</strong>
+            
 
-              
-              <div class="float-end mb-3">
-                  
-              </div>
+            <!-- Right Section -->
+            <div class="float-end mb-3">
+              {% if user.is_authenticated %}
+                <span class="me-3">Welcome, {{ user.first_name }}!</span>
+                
+              {% else %}
+                <a href="{% url 'login' %}" class="text-decoration-none me-3">
+                  <i class="fa-solid fa-sign-in"></i>
+                  Login
+                </a>
+              {% endif %}
+            </div>
           </div>
-      </div>
+        </div>
+      </div>
     </div>
     {% block content %}
     
