--- a/templates/authenticate/login.html
+++ b/templates/authenticate/login.html
@@ -1,11 +1,25 @@
-{% extends 'base.html' %}
-
-
 
 {% block content %}
-<div class="container d-flex justify-content-center align-items-center" style="min-height: 85vh;">
-    <div class="card p-4 shadow" style="width: 100%; max-width: 400px;">
-        <h2 class="text-center mb-4">Sign In</h2>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MoneyMint</title>
+    <title>MoneyMint</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+      body {
+        background-image: url('static/Images/Base4.jpg'); background-size: cover; background-repeat: no-repeat; 
+        background-attachment: fixed; background-position: center; width: 97.69vw; height: 97.69vh;
+      }
+    </style>
+  </head>
+<body>
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 85vh; padding-left: 55px; padding-top: 15px;">
+    <div class="card p-4 shadow" style="width: 100%; max-width: 400px; background-color:aliceblue;">
+        
+        <h1 class="text-center mb-4" style="color:black;">Sign In</h1>
         <form class="row" method="post">
             {% csrf_token %}
             <div class="mb-3">
@@ -26,7 +40,9 @@
             </div>
             <button type="submit" class="btn btn-primary w-100">Sign In</button>
         </form>
+        <hr>
+        <div><p class="text-center">Doesn't have an account? <a href="{% url 'register' %}">Register</a></p></div>
     </div>
 </div>
-
+</body>
 {% endblock content %}
