--- a/templates/authenticate/register.html
+++ b/templates/authenticate/register.html
@@ -1,45 +1,71 @@
-{% extends 'base.html' %}
+
 
 {% block content %}
-<div class="container">
-    <form class="row" method="post">
-        {% csrf_token %}
-        <div class="col-12 mb-5 fs-3 fw-bolder">
-            Register to MoneyMint
+<head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>MoneyMint</title>
+        <title>MoneyMint</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            min-height: 100vh;
+            margin: 0;
+            background-image: url('/static/Images/Base2.jpg');
+            background-size: cover; background-repeat: no-repeat; background-attachment: fixed; 
+                    background-position: center; width: 97.69vw; height: 97.69vh;
+        }
+    </style>
+</head>
+<body>
+    <div class="container mt-3" style=" background-color: aliceblue; ">
+        <form class="row" method="post">
+            {% csrf_token %}
+            <div class="col-12 mb-4 fs-3 fw-bolder text-center mt-2">
+                Register to MoneyMint
+            </div>
+            <div class="mb-3 col-6">
+                <label for="username" class="form-label">First name</label>
+                <input type="text" class="form-control" id="username" name="username" required>
+            </div>
+            <div class="mb-3 col-6">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="mb-3 col-6">
+                <label for="DOB" class="form-label">Date of birth</label>
+                <input type="date" class="form-control" id="DOB" name="DOB" required>
+            </div>
+           
+            <div class="mb-3 col-6">
+                <label for="aadhar" class="form-label">Aadhar card number</label>
+                <input type="number" class="form-control" id="aadhar" name="aadhar" required>
+            </div>
+            <div class="mb-3 col-6">
+                <label for="pancard" class="form-label">Pan card number</label>
+                <input type="text" class="form-control" id="pancard" name="pancard" required>
+            </div>
+            <div class="mb-3 col-6">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="mb-3 col-12">
+                <label for="address" class="form-label">Address</label>
+                <textarea class="form-control" id="address" name="address" rows="5"></textarea>
+              </div>
+            <div class="col-12 text-center mb-3">
+                <button type="submit" class="btn btn-primary">Register</button>
+            </div>
+        </form>
+        <div class="col-12 text-center mb-3 pb-3">
+            Already have an account? <a href="{% url 'login' %}">Login</a>
         </div>
-        <div class="mb-3 col-6">
-            <label for="username" class="form-label">First name</label>
-            <input type="text" class="form-control" id="username" name="username" required>
-        </div>
-        <div class="mb-3 col-6">
-            <label for="email" class="form-label">Email</label>
-            <input type="email" class="form-control" id="email" name="email" required>
-        </div>
-        <div class="mb-3 col-6">
-            <label for="DOB" class="form-label">Date of birth</label>
-            <input type="date" class="form-control" id="DOB" name="DOB" required>
-        </div>
-       
-        <div class="mb-3 col-6">
-            <label for="aadhar" class="form-label">Aadhar card number</label>
-            <input type="number" class="form-control" id="aadhar" name="aadhar" required>
-        </div>
-        <div class="mb-3 col-6">
-            <label for="pancard" class="form-label">Pan card number</label>
-            <input type="text" class="form-control" id="pancard" name="pancard" required>
-        </div>
-        <div class="mb-3 col-6">
-            <label for="password" class="form-label">Password</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <div class="mb-3 col-12">
-            <label for="address" class="form-label">Address</label>
-            <textarea class="form-control" id="address" name="address" rows="5"></textarea>
-          </div>
-        <div class="mb-3">
-            <button type="submit" class="btn btn-primary">Register</button>
-        </div>
-    </form>
-</div>
+    </div>
+</body>
+
 
 {% endblock content %}
